# bit-waffle

./: .gitignore  LICENSE  README.md  pyproject.toml
BitWaffle/BitWindows/: Packet.py  Window.py
BitWaffle/CRC/: Algorithms.py  CRC.py  __init__.py
BitWaffle/Frames/: Frame.py
BitWaffle/Util/: BinaryPolynomial.py  Galois.py  Polynomial.py  Primes.py  Ticker.py
BitWaffle/bit-message/: bitmessage.py  readme.md
BitWaffle/tests/CRC/: CRC.py
BitWaffle/tests/Util/: Ticker.py
tests/CRC/: test_CRC.py
tests/Util/: Ticker.py
