[tool.poetry]
name = "bit-waffle"
version = "0.1.0"
description = ""
authors = ["Alex Feather <alexfeather77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-coverage = ">=0.0"
pytest-pretty-terminal = ">=0.0"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--pretty --cov-report term-missing:skip-covered"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
